<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin">

    <ImageView
        android:id="@+id/img_photo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_photo"
        android:text="@string/tvshow_name"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_popular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_name"
        android:layout_marginStart="26dp"
        android:layout_marginTop="6dp"
        android:layout_toRightOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/tvshow_pop"
        android:drawableLeft="@drawable/ic_eye_black"
        android:drawablePadding="4dp" />

    <TextView
        android:id="@+id/txt_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_popular"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_toRightOf="@id/img_photo"
        android:ellipsize="end"
        android:maxLines="5"
        android:text="@string/tvshow_desc" />

</RelativeLayout>